RESOLVED FIXED193067
Don't spin up a CalcParser if the current token is not a function token
https://bugs.webkit.org/show_bug.cgi?id=193067
Summary Don't spin up a CalcParser if the current token is not a function token
Simon Fraser (smfr)
Reported 2019-01-01 11:54:53 PST
Don't spin up a CalcParser if the current token is not a function token
Attachments
Patch (9.20 KB, patch)
2019-01-01 11:56 PST, Simon Fraser (smfr)
no flags
Patch (8.77 KB, patch)
2019-01-01 11:57 PST, Simon Fraser (smfr)
zalan: review+
commit-queue: commit-queue-
Simon Fraser (smfr)
Comment 1 2019-01-01 11:56:04 PST
Simon Fraser (smfr)
Comment 2 2019-01-01 11:57:29 PST
WebKit Commit Bot
Comment 3 2019-01-02 11:59:02 PST
Comment on attachment 358174 [details] Patch Rejecting attachment 358174 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-01', 'apply-attachment', '--no-update', '--non-interactive', 358174, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Logging in as commit-queue@webkit.org... Fetching: https://bugs.webkit.org/attachment.cgi?id=358174&action=edit Fetching: https://bugs.webkit.org/show_bug.cgi?id=193067&ctype=xml&excludefield=attachmentdata Processing 1 patch from 1 bug. Processing patch 358174 from bug 193067. Fetching: https://bugs.webkit.org/attachment.cgi?id=358174 Failed to run "[u'/Volumes/Data/EWS/WebKit/Tools/Scripts/svn-apply', '--force', '--reviewer', u'Zalan Bujtas']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Parsed 2 diffs from patch file(s). patching file Source/WebCore/ChangeLog Hunk #1 succeeded at 1 with fuzz 3. patching file Source/WebCore/css/parser/CSSPropertyParserHelpers.cpp Hunk #1 succeeded at 138 (offset -1 lines). Hunk #2 succeeded at 151 (offset -1 lines). Hunk #3 succeeded at 169 (offset -1 lines). Hunk #4 succeeded at 201 (offset -1 lines). Hunk #5 succeeded at 213 (offset -1 lines). Hunk #6 succeeded at 235 (offset -1 lines). Hunk #7 succeeded at 301 (offset -1 lines). Hunk #8 succeeded at 320 (offset -1 lines). Hunk #9 succeeded at 353 (offset -1 lines). Hunk #10 succeeded at 379 (offset -1 lines). Hunk #11 FAILED at 408. Hunk #12 succeeded at 432 (offset 5 lines). Hunk #13 succeeded at 446 (offset 5 lines). 1 out of 13 hunks FAILED -- saving rejects to file Source/WebCore/css/parser/CSSPropertyParserHelpers.cpp.rej Failed to run "[u'/Volumes/Data/EWS/WebKit/Tools/Scripts/svn-apply', '--force', '--reviewer', u'Zalan Bujtas']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Full output: https://webkit-queues.webkit.org/results/10606740
Simon Fraser (smfr)
Comment 4 2019-01-02 13:10:03 PST
Radar WebKit Bug Importer
Comment 5 2019-01-02 13:11:30 PST
Note You need to log in before you can comment on or make changes to this bug.