Don't spin up a CalcParser if the current token is not a function token https://bugs.webkit.org/show_bug.cgi?id=193067

Reviewed by Zalan Bujtas.

Various functions in CSSPropertyParserHelpers fall back to trying to parse
a calc expression if the normal parsing fails. Don't do this unless the
current token is a function token, which should be slightly more efficient.

* css/parser/CSSPropertyParserHelpers.cpp:
(WebCore::CSSPropertyParserHelpers::consumeInteger):
(WebCore::CSSPropertyParserHelpers::consumePositiveIntegerRaw):
(WebCore::CSSPropertyParserHelpers::consumeNumberRaw):
(WebCore::CSSPropertyParserHelpers::consumeNumber):
(WebCore::CSSPropertyParserHelpers::consumeFontWeightNumber):
(WebCore::CSSPropertyParserHelpers::consumeLength):
(WebCore::CSSPropertyParserHelpers::consumePercent):
(WebCore::CSSPropertyParserHelpers::consumeLengthOrPercent):
(WebCore::CSSPropertyParserHelpers::consumeAngle):
(WebCore::CSSPropertyParserHelpers::consumeAngleOrPercent):
(WebCore::CSSPropertyParserHelpers::consumeTime):

Canonical link: https://commits.webkit.org/207606@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@239575 268f45cc-cd09-0410-ab3c-d52691b4dbfc